--- a/hospitalManagment/hospitalManagment/hospitalManagment.csproj
+++ b/hospitalManagment/hospitalManagment/hospitalManagment.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="MongoDB.Driver" Version="3.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.3.1" />
+    <PackageReference Include="System.Text.Json" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
