--- a/hospitalManagment/Dockerfile
+++ b/hospitalManagment/Dockerfile
@@ -1,14 +1,22 @@
-# Use an official .NET runtime as a parent image
-FROM mcr.microsoft.com/dotnet/aspnet:8.0
-
-# Set the working directory inside the container
+# Use the official .NET runtime as a base image
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 
-# Copy the published app files into the container
-COPY publish/ .
+# Use the .NET SDK to build the app
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+WORKDIR /src
 
-# Expose the necessary port
-EXPOSE 8080
+# Copy project files
+COPY . .
 
-# Start the app using the DLL
-CMD ["dotnet", "hospitalManagment.dll"]
+# Restore and publish
+RUN dotnet restore
+RUN dotnet publish -c Release -o /app/publish
+
+# Final stage: runtime image
+FROM base AS final
+WORKDIR /app
+COPY --from=build /app/publish .
+
+# 👇 Change this to your correct DLL
+ENTRYPOINT ["dotnet", "hospitalManagment.dll"]
